Fixed annoying layout issues

--- a/public/static/sass/views/views.sass
+++ b/public/static/sass/views/views.sass
@@ -3,7 +3,14 @@
 @import "./components/components"
 
 
+.app-container
+	height: 100vh
+	overflow-y: hidden
 
+.main-view-container
+	height: calc(100vh - 80px)
+
+	
 .main-view
 	&.ng-enter
 		@include slideInUp()
